spring-boot-app/script/kubernetes/deploys/canary/app-v2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-v2
  labels:
    app: v2
  namespace: ns-deploy
spec:
  containers:
  - name: container
    image: progress0407/app-ver2
---
apiVersion: v1
kind: Service
metadata:
  name: svc-v2
  namespace: ns-deploy
spec:
  selector:
    app: v2
  ports:
  - port: 8080
