spring-boot-app/script/kubernetes/deploys/canary/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-deploy
  # namespace: ns-deploy
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "5"
spec:
  ingressClassName: nginx
  rules:
  - host: www.app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-v2
            port:
              number: 8080
